kubernetes/generated/clusters/homestar/tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tautulli
    spec:
      containers:
      - env:
        - name: TZ
          value: EST5EDT
        image: tautulli/tautulli
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 10000
          httpGet:
            path: /
            port: 8181
        name: tautulli
        ports:
        - containerPort: 8181
        volumeMounts:
        - mountPath: /config
          name: config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: tautulli
