kubernetes/generated/clusters/homestar/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: default
spec:
  ports:
  - name: http
    port: 8181
    protocol: TCP
  selector:
    app.kubernetes.io/name: tautulli
